feat: adjustment logic rt at
